--- a/index.html
+++ b/index.html
@@ -105,30 +105,29 @@
                             <div class="portfolio-item">
                                 <h3 class="section-heading">Mark Guerrero</h3>
                                 <p class="text">Product Designer</p>
-                                <div class="our-team-network">
                                     <ul class="our-team-network-list">
-                                        <li class="our-team-network-item">
+                                        <li class="item">
                                             <a class="our-team-link" href="">
                                             <svg class="our-team-svg" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                             </a>
                                         </li>
-                                        <li class="our-team-network-item">
+                                        <li class="item">
                                             <a class="our-team-link" href="">
                                                 <svg class="our-team-svg" width="16" height="16">
                                                     <use href="./images/icons.svg#icon-twitter"></use>
                                                 </svg>
                                             </a>
                                         </li>
-                                        <li class="our-team-network-item">
+                                        <li class="item">
                                             <a class="our-team-link" href="">
                                                 <svg class="our-team-svg" width="16" height="16">
                                                     <use href="./images/icons.svg#icon-facebook"></use>
                                                 </svg>
                                             </a>
                                         </li>
-                                        <li class="our-team-network-item">
+                                        <li class="item">
                                             <a class="our-team-link" href="">
                                                 <svg class="our-team-svg" width="16" height="16">
                                                     <use href="./images/icons.svg#icon-linkedin"></use>
@@ -136,7 +135,6 @@
                                             </a>
                                         </li>
                                     </ul>
-                                </div>
                             </div>
                     </li>
                 <li class="gallery">
