--- a/index.html
+++ b/index.html
@@ -142,6 +142,36 @@
                         <div class="portfolio-item">
                             <h3 class="section-heading">Tom Ford</h3>
                             <p class="text">Frontend Developer</p>
+                            <ul class="our-team-network-list">
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                 </li>
                 <li class="gallery">
@@ -149,6 +179,36 @@
                         <div class="portfolio-item">
                             <h3 class="section-heading">Camila Garcia</h3>
                             <p class="text">Marketing</p>
+                            <ul class="our-team-network-list">
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                 </li>
                 <li class="gallery">
@@ -156,6 +216,36 @@
                         <div class="portfolio-item">
                             <h3 class="section-heading">Daniel Wilson</h3>
                             <p class="text">UI Designer</p>
+                            <ul class="our-team-network-list">
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item">
+                                    <a class="our-team-link" href="">
+                                        <svg class="our-team-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                 </li>
             </ul>
