--- a/index.html
+++ b/index.html
@@ -371,7 +371,11 @@
     </div>
 </footer>
 <div class="modal-overlay">
-    <div class="modal"></div>
+    <div class="modal">
+        <button type="button" class=""><svg class="modal-svg">
+            <use href="./images/icons.svg#icon-close"></use>
+        </svg></button>
+    </div>
 </div>
 </body>
 </html>
