--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 </footer>
 <div class="modal-overlay">
     <div class="modal">
-        <button type="button" class="modal-btn"><svg class="modal-svg">
+        <button type="button" class="modal-btn"><svg class="modal-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
         </svg></button>
     </div>
