--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
         <button type="button" class="modal-btn"><svg class="modal-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
         </svg></button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
     </div>
 </div>
 </body>
