--- a/index.html
+++ b/index.html
@@ -376,6 +376,11 @@
             <use href="./images/icons.svg#icon-close"></use>
         </svg></button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
+    <div class="modal-wrap">
+        <form class="modal-form">
+        
+        </form>
+    </div>
     </div>
 </div>
 </body>
