--- a/index.html
+++ b/index.html
@@ -376,11 +376,15 @@
             <use href="./images/icons.svg#icon-close"></use>
         </svg></button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
-    <div class="modal-wrap">
         <form class="modal-form">
-        
+            <label for="user-name" class="modal-label">Name</label>
+            <div>
+                <input type="text" name="user-name" class="modal-input" placeholder="">
+                <svg class="modal-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-name"></use>
+                </svg>
+            </div>
         </form>
-    </div>
     </div>
 </div>
 </body>
