--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <form class="modal-form">
             <label for="user-name" class="modal-label">Name</label>
             <div>
-                <input type="text" name="user-name" class="modal-input" placeholder="">
+                <input type="text" name="user-name" class="modal-input" placeholder="Enter name">
                 <svg class="modal-icon" width="18" height="24">
                     <use href="./images/icons.svg#icon-name"></use>
                 </svg>
