--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
             <label for="user-name" class="modal-label">Name</label>
-            <div>
+            <div class="modal-form-field">
                 <input type="text" name="user-name" class="modal-input" placeholder="Enter name">
                 <svg class="modal-icon" width="18" height="24">
                     <use href="./images/icons.svg#icon-name"></use>
