--- a/index.html
+++ b/index.html
@@ -378,9 +378,27 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
             <div class="modal-input">
-                <label for="user-name" class="modal-label">Name</label>
+                <label class="modal-label" for="user-name">Name</label>
                 <div class="modal-form-field">
-                    <input type="text" name="user-name" class="modal-input" placeholder="Enter name">
+                    <input type="text" name="user-name" class="modal-form-icon">
+                    <svg class="modal-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-name"></use>
+                    </svg>
+            </div>
+            </div>
+            <div class="modal-input">
+                <label class="modal-label" for="phone">Phone</label>
+                <div class="modal-form-field">
+                    <input type="text" name="user-name" class="modal-form-icon">
+                    <svg class="modal-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-name"></use>
+                    </svg>
+            </div>
+            </div>
+            <div class="modal-input">
+                <label for="modal-label" for="email" class="tel">Email</label>
+                <div class="modal-form-field">
+                    <input type="text" name="user-name" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-name"></use>
                     </svg>
