--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
             <div class="modal-input">
-                <label class="modal-label" for="user-name">Name</label>
+                <label class="modal-label" for="user-name"> Name </label>
                 <div class="modal-form-field">
                     <input type="text" name="user-name" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
@@ -387,7 +387,7 @@
             </div>
             </div>
             <div class="modal-input">
-                <label class="modal-label" for="phone">Phone</label>
+                <label class="modal-label" for="phone"> Phone </label>
                 <div class="modal-form-field">
                     <input type="text" name="user-name" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
@@ -396,7 +396,7 @@
             </div>
             </div>
             <div class="modal-input">
-                <label for="modal-label" for="email" class="tel">Email</label>
+                <label class="modal-label" for="email"> Email </label>
                 <div class="modal-form-field">
                     <input type="text" name="user-name" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
