--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 <div class="modal-form-field">
                     <input type="text" name="user-name" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-name"></use>
+                        <use href="./images/icons.svg#icon-contact"></use>
                     </svg>
             </div>
             </div>
@@ -400,7 +400,7 @@
                 <div class="modal-form-field">
                     <input type="text" name="user-name" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-name"></use>
+                        <use href="./images/icons.svg#icon-email"></use>
                     </svg>
             </div>
             </div>
