--- a/index.html
+++ b/index.html
@@ -402,6 +402,19 @@
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
+                    <div class="modal-comment">
+                        <label for="user-comment" class="modal-input-label">
+                            " Comment "
+                            <textarea class="modal-form-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+                        </label>
+                    </div>
+                    <div class="modal-checkbox">
+                    <input class="checkbox-link visually-hidden" type="user-privacy" value="true" name="user-privacy">
+                    <label for="user-privacy" class="check-text">
+                        "I accept the terms and conditions of the"
+                        <span class="check-color">Privacy Policy</span>
+                    </label>
+                </div>
             </div>
             </div>
         </form>
