--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <div class="modal-input">
                 <label class="modal-label" for="user-name"> Name </label>
                 <div class="modal-form-field">
-                    <input type="text" name="user-name" class="modal-form-icon">
+                    <input type="text" name="user-name" id="user-name" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-name"></use>
                     </svg>
@@ -389,7 +389,7 @@
             <div class="modal-input">
                 <label class="modal-label" for="phone"> Phone </label>
                 <div class="modal-form-field">
-                    <input type="text" name="user-name" class="modal-form-icon">
+                    <input type="text" name="phone" id="phone" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-contact"></use>
                     </svg>
@@ -398,7 +398,7 @@
             <div class="modal-input">
                 <label class="modal-label" for="email"> Email </label>
                 <div class="modal-form-field">
-                    <input type="text" name="user-name" class="modal-form-icon">
+                    <input type="text" name="email" id="email" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
