--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             </div>
             </div>
             <div class="modal-comment">
-                <label for="modal-label" class="modal-input-label">Comment
+                <label for="user-comment" class="modal-label">Comment
                     <textarea class="modal-form-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                 </label>
             </div>
