--- a/index.html
+++ b/index.html
@@ -406,11 +406,11 @@
             </div>
             <div class="modal-comment">
                 <label for="user-comment" class="modal-label">Comment
-                    <textarea class="modal-form-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+                    <textarea class="modal-form-comment" name="user-comment" id="comment" placeholder="Text input"></textarea>
                 </label>
             </div>
             <div class="modal-checkbox">
-            <input class="checkbox-link visually-hidden" type="user-privacy" value="true" name="user-privacy">
+            <input class="checkbox-link visually-hidden" type="user-privacy" value="true" name="privacy">
                 <label for="user-privacy" class="check-text">I accept the terms and conditions of the<span class="check-color">Privacy Policy</span>
             </label>
         </div>
