--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
             <div class="modal-input">
-                <label class="modal-label" for="name"> Name </label>
+                <label class="modal-label" for="user-name"> Name </label>
                 <div class="modal-form-field">
                     <input type="text" name="user-name" id="user-name" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
@@ -387,7 +387,7 @@
             </div>
             </div>
             <div class="modal-input">
-                <label class="modal-label" for="enter-phone"> Phone </label>
+                <label class="modal-label" for="phone"> Phone </label>
                 <div class="modal-form-field">
                     <input type="text" name="phone" id="phone" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
@@ -398,7 +398,7 @@
             <div class="modal-input">
                 <label class="modal-label" for="email"> Email </label>
                 <div class="modal-form-field">
-                    <input type="text" name="email" id="enter-email" class="modal-form-icon">
+                    <input type="text" name="email" id="email" class="modal-form-icon">
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
@@ -406,14 +406,11 @@
             </div>
             <div class="modal-comment">
                 <label for="user-comment" class="modal-label">Comment
-                <textarea class="modal-form-comment" 
-                name="user-comment" 
-                id="comment" 
-                placeholder="Text input"></textarea>
+                    <textarea class="modal-form-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                 </label>
             </div>
             <div class="modal-checkbox">
-            <input class="checkbox-link visually-hidden" type="user-privacy" value="true" name="privacy">
+            <input class="checkbox-link visually-hidden" type="user-privacy" value="true" name="user-privacy">
                 <label for="user-privacy" class="check-text">I accept the terms and conditions of the<span class="check-color">Privacy Policy</span>
             </label>
         </div>
